--- a/nx.json
+++ b/nx.json
@@ -13,6 +13,9 @@
     },
     "lisa": {
       "tags": []
+    },
+    "shared-login-feature": {
+      "tags": ["scope:shared", "type:feature"]
     }
   }
 }
