--- a/angular.json
+++ b/angular.json
@@ -146,6 +146,40 @@
           "styleext": "scss"
         }
       }
+    },
+    "shared-login-data-access": {
+      "projectType": "library",
+      "root": "libs/shared/login/data-access",
+      "sourceRoot": "libs/shared/login/data-access/src",
+      "prefix": "lisa",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/shared/login/data-access/tsconfig.lib.json",
+              "libs/shared/login/data-access/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/login/data-access/**"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/shared/login/data-access/jest.config.js",
+            "tsConfig": "libs/shared/login/data-access/tsconfig.spec.json",
+            "setupFile": "libs/shared/login/data-access/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "styleext": "scss"
+        }
+      }
     }
   },
   "cli": {
