--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
       "@lisa/shared/login/feature": ["libs/shared/login/feature/src/index.ts"],
       "@lisa/shared/login/data-access": [
         "libs/shared/login/data-access/src/index.ts"
-      ]
+      ],
+      "@lisa/shared/home/feature": ["libs/shared/home/feature/src/index.ts"],
+      "@lisa/shared/ui/toolbar": ["libs/shared/ui/toolbar/src/index.ts"],
+      "@lisa/shared/ui/sidenav": ["libs/shared/ui/sidenav/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
