--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@lisa/shared/home/ui": ["libs/shared/home/ui/src/index.ts"],
       "@lisa/shared/ui/thumbnail-carroussel": [
         "libs/shared/ui/thumbnail-carroussel/src/index.ts"
-      ]
+      ],
+      "@lisa/shared/ui/market-grid": ["libs/shared/ui/market-grid/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
