--- a/nx.json
+++ b/nx.json
@@ -34,6 +34,12 @@
     },
     "shared-ui-market-grid": {
       "tags": []
+    },
+    "shared-ui-search": {
+      "tags": []
+    },
+    "shared-toolbar-feature": {
+      "tags": []
     }
   }
 }
