feature(chat): creation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@lisa/shared/ui/search": ["libs/shared/ui/search/src/index.ts"],
       "@lisa/shared/toolbar/feature": [
         "libs/shared/toolbar/feature/src/index.ts"
-      ]
+      ],
+      "@lisa/shared/chat": ["libs/shared/chat/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
