--- a/angular.json
+++ b/angular.json
@@ -400,6 +400,37 @@
           "styleext": "scss"
         }
       }
+    },
+    "shared-chat": {
+      "projectType": "library",
+      "root": "libs/shared/chat",
+      "sourceRoot": "libs/shared/chat/src",
+      "prefix": "lisa",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/shared/chat/tsconfig.lib.json",
+              "libs/shared/chat/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/shared/chat/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/shared/chat/jest.config.js",
+            "tsConfig": "libs/shared/chat/tsconfig.spec.json",
+            "setupFile": "libs/shared/chat/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "styleext": "scss"
+        }
+      }
     }
   },
   "cli": {
