--- a/angular.json
+++ b/angular.json
@@ -401,28 +401,62 @@
         }
       }
     },
-    "shared-chat": {
+    "shared-chat-feature": {
       "projectType": "library",
-      "root": "libs/shared/chat",
-      "sourceRoot": "libs/shared/chat/src",
+      "root": "libs/shared/chat/feature",
+      "sourceRoot": "libs/shared/chat/feature/src",
       "prefix": "lisa",
       "architect": {
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "libs/shared/chat/tsconfig.lib.json",
-              "libs/shared/chat/tsconfig.spec.json"
+              "libs/shared/chat/feature/tsconfig.lib.json",
+              "libs/shared/chat/feature/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/shared/chat/**"]
+            "exclude": ["**/node_modules/**", "!libs/shared/chat/feature/**"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
-            "jestConfig": "libs/shared/chat/jest.config.js",
-            "tsConfig": "libs/shared/chat/tsconfig.spec.json",
-            "setupFile": "libs/shared/chat/src/test-setup.ts"
+            "jestConfig": "libs/shared/chat/feature/jest.config.js",
+            "tsConfig": "libs/shared/chat/feature/tsconfig.spec.json",
+            "setupFile": "libs/shared/chat/feature/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "styleext": "scss"
+        }
+      }
+    },
+    "shared-chat-data-access": {
+      "projectType": "library",
+      "root": "libs/shared/chat/data-access",
+      "sourceRoot": "libs/shared/chat/data-access/src",
+      "prefix": "lisa",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/shared/chat/data-access/tsconfig.lib.json",
+              "libs/shared/chat/data-access/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/chat/data-access/**"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/shared/chat/data-access/jest.config.js",
+            "tsConfig": "libs/shared/chat/data-access/tsconfig.spec.json",
+            "setupFile": "libs/shared/chat/data-access/src/test-setup.ts"
           }
         }
       },
