--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
     "@angular/core": "^8.0.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "^8.0.0",
     "@angular/material": "^8.1.4",
     "@angular/platform-browser": "^8.0.0",
@@ -45,13 +46,14 @@
     "@ngxs/store": "^3.5.1",
     "@nrwl/angular": "8.4.12",
     "core-js": "^2.5.4",
+    "firebase": "^6.5.0",
     "immer": "^3.2.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.1",
-    "@angular/cli": "8.1.1",
+    "@angular-devkit/build-angular": "^0.803.2",
+    "@angular/cli": "^8.1.1",
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^8.0.0",
     "@nrwl/cypress": "8.4.12",
@@ -69,6 +71,6 @@
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.5.3"
   }
 }
