feat(corelogin): core login

--- a/nx.json
+++ b/nx.json
@@ -46,6 +46,9 @@
     },
     "shared-chat-data-access": {
       "tags": []
+    },
+    "shared-core-data-access": {
+      "tags": []
     }
   }
 }
