--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,8 +36,11 @@
       "@lisa/shared/chat/feature": ["libs/shared/chat/feature/src/index.ts"],
       "@lisa/shared/chat/data-access": [
         "libs/shared/chat/data-access/src/index.ts"
+      ],
+      "@lisa/shared/core/data-access": [
+        "libs/shared/core/data-access/src/index.ts"
       ]
     }
   },
-  // "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp"]
 }
