feat(chat): chat

--- a/nx.json
+++ b/nx.json
@@ -49,6 +49,12 @@
     },
     "shared-core-data-access": {
       "tags": []
+    },
+    "shared-profile-feature": {
+      "tags": []
+    },
+    "shared-profile-ui": {
+      "tags": []
     }
   }
 }
