--- a/angular.json
+++ b/angular.json
@@ -499,6 +499,68 @@
           "styleext": "scss"
         }
       }
+    },
+    "shared-profile-feature": {
+      "projectType": "library",
+      "root": "libs/shared/profile/feature",
+      "sourceRoot": "libs/shared/profile/feature/src",
+      "prefix": "lisa",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/shared/profile/feature/tsconfig.lib.json",
+              "libs/shared/profile/feature/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/shared/profile/feature/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/shared/profile/feature/jest.config.js",
+            "tsConfig": "libs/shared/profile/feature/tsconfig.spec.json",
+            "setupFile": "libs/shared/profile/feature/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "styleext": "scss"
+        }
+      }
+    },
+    "shared-profile-ui": {
+      "projectType": "library",
+      "root": "libs/shared/profile/ui",
+      "sourceRoot": "libs/shared/profile/ui/src",
+      "prefix": "lisa",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/shared/profile/ui/tsconfig.lib.json",
+              "libs/shared/profile/ui/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/shared/profile/ui/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/shared/profile/ui/jest.config.js",
+            "tsConfig": "libs/shared/profile/ui/tsconfig.spec.json",
+            "setupFile": "libs/shared/profile/ui/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "styleext": "scss"
+        }
+      }
     }
   },
   "cli": {
