--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,8 @@
       "@lisa/shared/profile/feature": [
         "libs/shared/profile/feature/src/index.ts"
       ],
-      "@lisa/shared/profile/ui": ["libs/shared/profile/ui/src/index.ts"]
+      "@lisa/shared/profile/ui": ["libs/shared/profile/ui/src/index.ts"],
+      "@lisa/shared/chat/ui": ["libs/shared/chat/ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
