--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@angular/material": "^8.1.4",
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/pwa": "^0.803.3",
     "@angular/router": "^8.0.0",
-    "@ngmodule/material-carousel": "^0.5.0",
+    "@angular/service-worker": "^8.0.0",
+    "@ngu/carousel": "^1.5.5",
     "@ngxs-labs/immer-adapter": "^3.0.5",
     "@ngxs/logger-plugin": "^3.5.1",
     "@ngxs/router-plugin": "^3.5.1",
@@ -48,6 +50,9 @@
     "@nrwl/angular": "8.4.12",
     "core-js": "^2.5.4",
     "firebase": "^6.5.0",
+    "global": "^4.4.0",
+    "hammerjs": "^2.0.8",
+    "http-server": "^0.11.1",
     "immer": "^3.2.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
