--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "http-server": "^0.11.1",
     "immer": "^3.2.0",
     "rxjs": "~6.4.0",
+    "speak-tts": "^2.0.8",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
