--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "nx": "nx",
-    "start": "ng serve",
+    "start": "yarn nx serve lisa",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
@@ -54,6 +54,7 @@
     "hammerjs": "^2.0.8",
     "http-server": "^0.11.1",
     "immer": "^3.2.0",
+    "ngx-ui-loader": "^8.0.0",
     "rxjs": "~6.4.0",
     "speak-tts": "^2.0.8",
     "zone.js": "^0.9.1"
